Added Admin & User Transaction Page
 - Admin
  - Implemented structure
  - Linked with API
  - *Failed* Retrieve on /tra/**

 - User
  - Implemented structure
  - No Link with API